--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,6 +87,11 @@ input, select, textarea {
 
 	html {
 		box-sizing: border-box;
+		width: 100%;
+    	height: 100%;
+    	margin: 0px;
+    	padding: 0px;
+    	overflow-x: hidden; 
 	}
 
 	*, *:before, *:after {
