--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,11 @@ input, select, textarea {
 	}
 
 	body {
-		background: #f0c655;
+		width: 100%;
+    	height: 100%;
+    	margin: 0px;
+    	padding: 0px;
+    	overflow-x: hidden; 
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
